# esp-idf-XGZF4000

./: CMakeLists.txt  LICENSE  README.md  idf_component.yml  template.c  xgzf4000.c
.github/workflows/: espidf-compile-v5.1.yml  upload_component.yml
examples/default_example/: CMakeLists.txt
examples/default_example/main/: CMakeLists.txt  CMakeLists_registry.txt  Kconfig  idf_component.yml  main.c  xgzf4000-poll-data.c
examples/xgzf4000-example/: CMakeLists.txt
examples/xgzf4000-example/main/: CMakeLists.txt  idf_component.yml  xgzf4000-example.c
include/: template.h  xgzf4000.h
priv_include/: xgzf4000_reg.h
simulation/: diagram.json  xgzf4000-gas-flow-sensor-i2c-example.ino  xgzf4000.chip.c  xgzf4000.chip.json
